package com.panda.study.designmodel.adapter.objectadapter;

/**
 * Created by Administrator on 2019/7/29.
 */
public interface Voltage5V {
    public int output5V();
}
